Implementado música e imagem de menu. Tileset de personagem andando para baixo, esquerda e direita.

--- a/Game.ini
+++ b/Game.ini
@@ -2,7 +2,7 @@
 RTP=RPGVXAce
 Library=System\RGSS301.dll
 Scripts=Data\Scripts.rvdata2
-Title=Rosavel
+Title=Fantasmagoria
 Description=
 CreationDate=1755477792
 CloudDate=1755477794
